src/test/ui/unwind-abis/feature-gate-stdcall-unwind.stderr
error[E0658]: stdcall-unwind ABI is experimental and subject to change
  --> $DIR/feature-gate-stdcall-unwind.rs:12:8
   |
LL | extern "stdcall-unwind" fn fu() {}
   |        ^^^^^^^^^^^^^^^^
   |
   = note: see issue #74990 <https://github.com/rust-lang/rust/issues/74990> for more information
   = help: add `#![feature(c_unwind)]` to the crate attributes to enable

error[E0658]: stdcall-unwind ABI is experimental and subject to change
  --> $DIR/feature-gate-stdcall-unwind.rs:15:12
   |
LL |     extern "stdcall-unwind" fn mu();
   |            ^^^^^^^^^^^^^^^^
   |
   = note: see issue #74990 <https://github.com/rust-lang/rust/issues/74990> for more information
   = help: add `#![feature(c_unwind)]` to the crate attributes to enable

error[E0658]: stdcall-unwind ABI is experimental and subject to change
  --> $DIR/feature-gate-stdcall-unwind.rs:16:12
   |
LL |     extern "stdcall-unwind" fn dmu() {}
   |            ^^^^^^^^^^^^^^^^
   |
   = note: see issue #74990 <https://github.com/rust-lang/rust/issues/74990> for more information
   = help: add `#![feature(c_unwind)]` to the crate attributes to enable

error[E0658]: stdcall-unwind ABI is experimental and subject to change
  --> $DIR/feature-gate-stdcall-unwind.rs:21:12
   |
LL |     extern "stdcall-unwind" fn mu() {}
   |            ^^^^^^^^^^^^^^^^
   |
   = note: see issue #74990 <https://github.com/rust-lang/rust/issues/74990> for more information
   = help: add `#![feature(c_unwind)]` to the crate attributes to enable

error[E0658]: stdcall-unwind ABI is experimental and subject to change
  --> $DIR/feature-gate-stdcall-unwind.rs:25:12
   |
LL |     extern "stdcall-unwind" fn imu() {}
   |            ^^^^^^^^^^^^^^^^
   |
   = note: see issue #74990 <https://github.com/rust-lang/rust/issues/74990> for more information
   = help: add `#![feature(c_unwind)]` to the crate attributes to enable

error[E0658]: stdcall-unwind ABI is experimental and subject to change
  --> $DIR/feature-gate-stdcall-unwind.rs:28:19
   |
LL | type TAU = extern "stdcall-unwind" fn();
   |                   ^^^^^^^^^^^^^^^^
   |
   = note: see issue #74990 <https://github.com/rust-lang/rust/issues/74990> for more information
   = help: add `#![feature(c_unwind)]` to the crate attributes to enable

error[E0658]: stdcall-unwind ABI is experimental and subject to change
  --> $DIR/feature-gate-stdcall-unwind.rs:30:8
   |
LL | extern "stdcall-unwind" {}
   |        ^^^^^^^^^^^^^^^^
   |
   = note: see issue #74990 <https://github.com/rust-lang/rust/issues/74990> for more information
   = help: add `#![feature(c_unwind)]` to the crate attributes to enable

error: aborting due to 7 previous errors

For more information about this error, try `rustc --explain E0658`.
